--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,6 @@ version: '3'
 volumes: 
     dados:
 services:
-    app:
-        build: ./App
-        command: python app.py
-        volumes: 
-            - ./App:/usr/src/app
-        ports:
-            - 5000:5000
     db:
         image: postgres:9.6
         environment: 
@@ -18,3 +11,14 @@ services:
             POSTGRES_DB: 'evolux'
         volumes: 
             - dados:/var/lib/postgresql/data
+    app:
+        build: ./App
+        command: python app.py
+        volumes: 
+            - ./App:/usr/src/app
+        ports:
+            - 5000:5000
+        
+        depends_on: 
+            - db
+    
